fixed the popup form animation and alignment

--- a/components/Global/PopupForm.css
+++ b/components/Global/PopupForm.css
@@ -1,18 +1,18 @@
 @keyframes zigzag {
   0% {
-    transform: translate(-5px, 5px);
+    transform: translate(0, 0);
   }
   25% {
-    transform: translate(45%, 70%);
+    transform: translate(45%, 50%);
   }
   50% {
-    transform: translate(105%, -20%);
+    transform: translate(100%, -25%);
   }
   75% {
-    transform: translate(145%, 85%);
+    transform: translate(155%, 65%);
   }
   100% {
-    transform: translate(200%, -5%);
+    transform: translate(200%, -20%);
   }
 }
 
